src/extern/pkcs11t.h


/* an unsigned 8-bit value */
typedef unsigned char     CK_BYTE;


/* an 8-bit UTF-8 character */
typedef CK_BYTE           CK_UTF8CHAR;


/* a BYTE-sized Boolean flag */
typedef CK_BYTE           CK_BBOOL;


/* an unsigned value, at least 32 bits long */
typedef unsigned long int CK_ULONG;


/* at least 32 bits; each bit is a Boolean flag */
typedef CK_ULONG          CK_FLAGS;


typedef struct CK_VERSION {
  CK_BYTE       major;  /* integer portion of version number */
  CK_BYTE       minor;  /* 1/100ths portion of version number */
} CK_VERSION;



typedef struct CK_INFO {
  /* manufacturerID and libraryDecription have been changed from
   * CK_CHAR to CK_UTF8CHAR for v2.10 */
  CK_VERSION    cryptokiVersion;     /* Cryptoki interface ver */
  CK_UTF8CHAR   manufacturerID[32];  /* blank padded */
  CK_FLAGS      flags;               /* must be zero */

  CK_UTF8CHAR   libraryDescription[32];  /* blank padded */
  CK_VERSION    libraryVersion;          /* version of library */
} CK_INFO;


typedef CK_ULONG          CK_SLOT_ID;



/* CK_SLOT_INFO provides information about a slot */
typedef struct CK_SLOT_INFO {
  /* slotDescription and manufacturerID have been changed from
   * CK_CHAR to CK_UTF8CHAR for v2.10 */
  CK_UTF8CHAR   slotDescription[64];  /* blank padded */
  CK_UTF8CHAR   manufacturerID[32];   /* blank padded */
  CK_FLAGS      flags;

  CK_VERSION    hardwareVersion;  /* version of hardware */
  CK_VERSION    firmwareVersion;  /* version of firmware */
} CK_SLOT_INFO;



/* CK_RV is a value that identifies the return value of a
 * Cryptoki function */
typedef CK_ULONG          CK_RV;


#define CKR_OK                                0x00000000